--- a/src/components/QuizItem/QuizItem.module.css
+++ b/src/components/QuizItem/QuizItem.module.css
@@ -8,5 +8,5 @@
 }
 
 .item_bg {
-    background-image: linear-gradient(0deg, plum 2%, transparent 50%);
+    background-image: linear-gradient(0deg, violet 10%, plum 50%);
 }
