--- a/src/components/QuizItem/QuizItem.module.css
+++ b/src/components/QuizItem/QuizItem.module.css
@@ -1,3 +1,6 @@
+::root {
+    --color: @apply bg-fuchsia-500;
+}
 .question_mark {
     font-size: 600%;
 }
@@ -8,5 +11,5 @@
 }
 
 .item_bg {
-    background-image: linear-gradient(0deg, violet 10%, plum 50%);
+    background-image: linear-gradient(0deg, plum 5%, rgb(221, 160, 221, .1) 40%);
 }
